parser/tajaParser.py
# Generated from parser/taja.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class tajaParser ( Parser ):

    grammarFileName = "taja.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'.'", "'{'", "'}'", "';'", 
                     "','", "':'", "'?'", "'='", "'>'", "'<'", "'>='", "'<='", 
                     "'=='", "'!='", "'&&'", "'||'", "'+'", "'-'", "'*'", 
                     "'/'", "'int'", "'float'", "'bool'", "'char'", "'while'", 
                     "'repeat'", "'if'", "'else'", "'switch'", "'case'", 
                     "'class'", "'constructor'", "'function'", "'default'", 
                     "'break'", "'return'", "'continue'", "'for'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "TYPE_INT", 
                      "TYPE_FLOAT", "TYPE_BOOLEAN", "TYPE_CHAR", "WHILE", 
                      "REPEAT", "IF", "ELSE", "SWITCH", "CASE", "CLASS", 
                      "CONSTRUCTOR", "FUNCTION", "DEFAULT", "BREAK", "RETURN", 
                      "CONTINUE", "FOR", "ID", "INT", "FLOAT", "CHAR", "BOOL", 
                      "WS" ]

    RULE_start = 0
    RULE_function_definition = 1
    RULE_function_call = 2
    RULE_class_definition = 3
    RULE_class_statements = 4
    RULE_constructor = 5
    RULE_arguments = 6
    RULE_statements = 7
    RULE_statement = 8
    RULE_switchStatements = 9
    RULE_switchStatement = 10
    RULE_labelStatement = 11
    RULE_jumpStatement = 12
    RULE_selectionStatement = 13
    RULE_ternaryArguments = 14
    RULE_iterStatement = 15
    RULE_whileStatement = 16
    RULE_assignments = 17
    RULE_assignment_typed = 18
    RULE_assignment_empty = 19
    RULE_assignment_call = 20
    RULE_assignment = 21
    RULE_assignment_change = 22
    RULE_types = 23
    RULE_call = 24
    RULE_call_arguments = 25
    RULE_expressions = 26
    RULE_expression = 27
    RULE_summ = 28
    RULE_mult = 29
    RULE_arguments_repeat = 30
    RULE_atomic = 31

    ruleNames =  [ "start", "function_definition", "function_call", "class_definition", 
                   "class_statements", "constructor", "arguments", "statements", 
                   "statement", "switchStatements", "switchStatement", "labelStatement", 
                   "jumpStatement", "selectionStatement", "ternaryArguments", 
                   "iterStatement", "whileStatement", "assignments", "assignment_typed", 
                   "assignment_empty", "assignment_call", "assignment", 
                   "assignment_change", "types", "call", "call_arguments", 
                   "expressions", "expression", "summ", "mult", "arguments_repeat", 
                   "atomic" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    TYPE_INT=23
    TYPE_FLOAT=24
    TYPE_BOOLEAN=25
    TYPE_CHAR=26
    WHILE=27
    REPEAT=28
    IF=29
    ELSE=30
    SWITCH=31
    CASE=32
    CLASS=33
    CONSTRUCTOR=34
    FUNCTION=35
    DEFAULT=36
    BREAK=37
    RETURN=38
    CONTINUE=39
    FOR=40
    ID=41
    INT=42
    FLOAT=43
    CHAR=44
    BOOL=45
    WS=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(tajaParser.EOF, 0)

        def class_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tajaParser.Class_definitionContext)
            else:
                return self.getTypedRuleContext(tajaParser.Class_definitionContext,i)


        def getRuleIndex(self):
            return tajaParser.RULE_start

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = tajaParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==tajaParser.CLASS:
                self.state = 64
                self.class_definition()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(tajaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(tajaParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(tajaParser.ID, 0)

        def statements(self):
            return self.getTypedRuleContext(tajaParser.StatementsContext,0)


        def arguments(self):
            return self.getTypedRuleContext(tajaParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return tajaParser.RULE_function_definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_definition" ):
                return visitor.visitFunction_definition(self)
            else:
                return visitor.visitChildren(self)




    def function_definition(self):

        localctx = tajaParser.Function_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(tajaParser.FUNCTION)
            self.state = 73
            self.match(tajaParser.ID)
            self.state = 74
            self.match(tajaParser.T__0)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==tajaParser.ID:
                self.state = 75
                self.arguments()


            self.state = 78
            self.match(tajaParser.T__1)
            self.state = 79
            self.statements()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(tajaParser.ID, 0)

        def call(self):
            return self.getTypedRuleContext(tajaParser.CallContext,0)


        def getRuleIndex(self):
            return tajaParser.RULE_function_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_call" ):
                return visitor.visitFunction_call(self)
            else:
                return visitor.visitChildren(self)




    def function_call(self):

        localctx = tajaParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(tajaParser.ID)
            self.state = 82
            self.match(tajaParser.T__2)
            self.state = 83
            self.call()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(tajaParser.CLASS, 0)

        def ID(self):
            return self.getToken(tajaParser.ID, 0)

        def class_statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tajaParser.Class_statementsContext)
            else:
                return self.getTypedRuleContext(tajaParser.Class_statementsContext,i)


        def getRuleIndex(self):
            return tajaParser.RULE_class_definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_definition" ):
                return visitor.visitClass_definition(self)
            else:
                return visitor.visitChildren(self)




    def class_definition(self):

        localctx = tajaParser.Class_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(tajaParser.CLASS)
            self.state = 86
            self.match(tajaParser.ID)
            self.state = 87
            self.match(tajaParser.T__3)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tajaParser.CONSTRUCTOR) | (1 << tajaParser.FUNCTION) | (1 << tajaParser.ID))) != 0):
                self.state = 88
                self.class_statements()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(tajaParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_statementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment_typed(self):
            return self.getTypedRuleContext(tajaParser.Assignment_typedContext,0)


        def assignment_empty(self):
            return self.getTypedRuleContext(tajaParser.Assignment_emptyContext,0)


        def constructor(self):
            return self.getTypedRuleContext(tajaParser.ConstructorContext,0)


        def function_definition(self):
            return self.getTypedRuleContext(tajaParser.Function_definitionContext,0)


        def getRuleIndex(self):
            return tajaParser.RULE_class_statements

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_statements" ):
                return visitor.visitClass_statements(self)
            else:
                return visitor.visitChildren(self)




    def class_statements(self):

        localctx = tajaParser.Class_statementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_class_statements)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.assignment_typed()
                self.state = 97
                self.match(tajaParser.T__5)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.assignment_empty()
                self.state = 100
                self.match(tajaParser.T__5)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 102
                self.constructor()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.function_definition()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTRUCTOR(self):
            return self.getToken(tajaParser.CONSTRUCTOR, 0)

        def arguments(self):
            return self.getTypedRuleContext(tajaParser.ArgumentsContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tajaParser.StatementContext)
            else:
                return self.getTypedRuleContext(tajaParser.StatementContext,i)


        def getRuleIndex(self):
            return tajaParser.RULE_constructor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstructor" ):
                return visitor.visitConstructor(self)
            else:
                return visitor.visitChildren(self)




    def constructor(self):

        localctx = tajaParser.ConstructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constructor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(tajaParser.CONSTRUCTOR)
            self.state = 107
            self.match(tajaParser.T__0)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==tajaParser.ID:
                self.state = 108
                self.arguments()


            self.state = 111
            self.match(tajaParser.T__1)
            self.state = 112
            self.match(tajaParser.T__3)
            self.state = 116
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 113
                    self.statement() 
                self.state = 118
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 119
            self.match(tajaParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(tajaParser.ID)
            else:
                return self.getToken(tajaParser.ID, i)

        def assignment_empty(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tajaParser.Assignment_emptyContext)
            else:
                return self.getTypedRuleContext(tajaParser.Assignment_emptyContext,i)


        def getRuleIndex(self):
            return tajaParser.RULE_arguments

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArguments" ):
                return visitor.visitArguments(self)
            else:
                return visitor.visitChildren(self)




    def arguments(self):

        localctx = tajaParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arguments)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.match(tajaParser.ID)
                self.state = 126
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
                while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1+1:
                        self.state = 122
                        self.match(tajaParser.T__6)
                        self.state = 123
                        self.match(tajaParser.ID) 
                    self.state = 128
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.assignment_empty()
                self.state = 134
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
                while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1+1:
                        self.state = 130
                        self.match(tajaParser.T__6)
                        self.state = 131
                        self.assignment_empty() 
                    self.state = 136
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tajaParser.StatementContext)
            else:
                return self.getTypedRuleContext(tajaParser.StatementContext,i)


        def getRuleIndex(self):
            return tajaParser.RULE_statements

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = tajaParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(tajaParser.T__3)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tajaParser.WHILE) | (1 << tajaParser.REPEAT) | (1 << tajaParser.IF) | (1 << tajaParser.SWITCH) | (1 << tajaParser.CASE) | (1 << tajaParser.DEFAULT) | (1 << tajaParser.BREAK) | (1 << tajaParser.RETURN) | (1 << tajaParser.FOR) | (1 << tajaParser.ID) | (1 << tajaParser.INT) | (1 << tajaParser.FLOAT) | (1 << tajaParser.CHAR) | (1 << tajaParser.BOOL))) != 0):
                self.state = 140
                self.statement()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 146
            self.match(tajaParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignments(self):
            return self.getTypedRuleContext(tajaParser.AssignmentsContext,0)


        def selectionStatement(self):
            return self.getTypedRuleContext(tajaParser.SelectionStatementContext,0)


        def iterStatement(self):
            return self.getTypedRuleContext(tajaParser.IterStatementContext,0)


        def labelStatement(self):
            return self.getTypedRuleContext(tajaParser.LabelStatementContext,0)


        def jumpStatement(self):
            return self.getTypedRuleContext(tajaParser.JumpStatementContext,0)


        def expression(self):
            return self.getTypedRuleContext(tajaParser.ExpressionContext,0)


        def call(self):
            return self.getTypedRuleContext(tajaParser.CallContext,0)


        def function_call(self):
            return self.getTypedRuleContext(tajaParser.Function_callContext,0)


        def getRuleIndex(self):
            return tajaParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = tajaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.assignments()
                self.state = 149
                self.match(tajaParser.T__5)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.selectionStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 152
                self.iterStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 153
                self.labelStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 154
                self.jumpStatement()
                self.state = 155
                self.match(tajaParser.T__5)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 157
                self.expression()
                self.state = 158
                self.match(tajaParser.T__5)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 160
                self.call()
                self.state = 161
                self.match(tajaParser.T__5)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 163
                self.function_call()
                self.state = 164
                self.match(tajaParser.T__5)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchStatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CASE(self):
            return self.getToken(tajaParser.CASE, 0)

        def atomic(self):
            return self.getTypedRuleContext(tajaParser.AtomicContext,0)


        def switchStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tajaParser.SwitchStatementContext)
            else:
                return self.getTypedRuleContext(tajaParser.SwitchStatementContext,i)


        def getRuleIndex(self):
            return tajaParser.RULE_switchStatements

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSwitchStatements" ):
                return visitor.visitSwitchStatements(self)
            else:
                return visitor.visitChildren(self)




    def switchStatements(self):

        localctx = tajaParser.SwitchStatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_switchStatements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(tajaParser.T__3)
            self.state = 169
            self.match(tajaParser.CASE)
            self.state = 170
            self.atomic()
            self.state = 171
            self.match(tajaParser.T__7)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tajaParser.CASE) | (1 << tajaParser.DEFAULT) | (1 << tajaParser.BREAK) | (1 << tajaParser.RETURN) | (1 << tajaParser.ID))) != 0):
                self.state = 172
                self.switchStatement()
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 178
            self.match(tajaParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignments(self):
            return self.getTypedRuleContext(tajaParser.AssignmentsContext,0)


        def jumpStatement(self):
            return self.getTypedRuleContext(tajaParser.JumpStatementContext,0)


        def call(self):
            return self.getTypedRuleContext(tajaParser.CallContext,0)


        def labelStatement(self):
            return self.getTypedRuleContext(tajaParser.LabelStatementContext,0)


        def getRuleIndex(self):
            return tajaParser.RULE_switchStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSwitchStatement" ):
                return visitor.visitSwitchStatement(self)
            else:
                return visitor.visitChildren(self)




    def switchStatement(self):

        localctx = tajaParser.SwitchStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_switchStatement)
        try:
            self.state = 188
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.assignments()
                self.state = 181
                self.match(tajaParser.T__5)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 183
                self.jumpStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 184
                self.call()
                self.state = 185
                self.match(tajaParser.T__5)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 187
                self.labelStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(tajaParser.ID, 0)

        def statement(self):
            return self.getTypedRuleContext(tajaParser.StatementContext,0)


        def CASE(self):
            return self.getToken(tajaParser.CASE, 0)

        def atomic(self):
            return self.getTypedRuleContext(tajaParser.AtomicContext,0)


        def DEFAULT(self):
            return self.getToken(tajaParser.DEFAULT, 0)

        def getRuleIndex(self):
            return tajaParser.RULE_labelStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabelStatement" ):
                return visitor.visitLabelStatement(self)
            else:
                return visitor.visitChildren(self)




    def labelStatement(self):

        localctx = tajaParser.LabelStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_labelStatement)
        try:
            self.state = 201
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [tajaParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 190
                self.match(tajaParser.ID)
                self.state = 191
                self.match(tajaParser.T__7)
                self.state = 192
                self.statement()
                pass
            elif token in [tajaParser.CASE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 193
                self.match(tajaParser.CASE)
                self.state = 194
                self.atomic()
                self.state = 195
                self.match(tajaParser.T__7)
                self.state = 196
                self.statement()
                pass
            elif token in [tajaParser.DEFAULT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 198
                self.match(tajaParser.DEFAULT)
                self.state = 199
                self.match(tajaParser.T__7)
                self.state = 200
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JumpStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(tajaParser.BREAK, 0)

        def RETURN(self):
            return self.getToken(tajaParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(tajaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return tajaParser.RULE_jumpStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJumpStatement" ):
                return visitor.visitJumpStatement(self)
            else:
                return visitor.visitChildren(self)




    def jumpStatement(self):

        localctx = tajaParser.JumpStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_jumpStatement)
        self._la = 0 # Token type
        try:
            self.state = 210
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [tajaParser.BREAK]:
                self.enterOuterAlt(localctx, 1)
                self.state = 203
                self.match(tajaParser.BREAK)
                self.state = 204
                self.match(tajaParser.T__5)
                pass
            elif token in [tajaParser.RETURN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 205
                self.match(tajaParser.RETURN)
                self.state = 207
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tajaParser.ID) | (1 << tajaParser.INT) | (1 << tajaParser.FLOAT) | (1 << tajaParser.CHAR) | (1 << tajaParser.BOOL))) != 0):
                    self.state = 206
                    self.expression()


                self.state = 209
                self.match(tajaParser.T__5)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(tajaParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(tajaParser.ExpressionContext,0)

